--- a/style.css
+++ b/style.css
@@ -1,40 +1,57 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: black;
 }
 
-.row {
-  display: flex;
-}
-.row:first-of-type {
-  border-top: 1px solid rgba(0, 0, 0, 1);
+table {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  padding: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.row:last-of-type .col {
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+#game table {
+  border: 2px solid white;
+  margin-right: 1rem;
 }
 
 .col {
-  width: 20px;
-  height: 20px;
-  border-right: 1px solid rgba(0, 0, 0, 1);
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  width: 3rem;
+  height: 3rem;
+  background-color: black;
+  padding: 0;
+  position: relative;
 }
 
-.col:first-of-type {
-  border-left: 1px solid rgba(0, 0, 0, 1);
-}
-
-.col:last-of-type {
-  border-right: 1px solid rgba(0, 0, 0, 1);
+.col--pending {
+  /* background-color: white !important; */
+  transform: scale(0.25);
+  border-radius: 30px;
+  transform-origin: center;
+  z-index: 1;
 }
 
 #preview {
   margin-left: 1rem;
+  display: none;
 }
 
 #preview .col,
 #preview .row {
   border-color: rgba(0, 0, 0, 0.2);
+}
+
+#pause {
+  appearance: none;
+  font-size: 0.75rem;
+  letter-spacing: 2px;
+  padding: 0.25rem 0.75rem;
+  border-radius: 4px;
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  text-transform: uppercase;
+  font-family: Avenir;
 }
