--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ table {
 }
 
 .col {
-  width: 3rem;
-  height: 3rem;
+  width: 1rem;
+  height: 1rem;
   background-color: black;
   padding: 0;
   position: relative;
@@ -54,4 +54,8 @@ table {
   color: white;
   text-transform: uppercase;
   font-family: Avenir;
+}
+
+#debug {
+  color: white;
 }
